syntax = "proto3";

//service is a collection of rpcs
service UserService {
    rpc addUser(User) returns(User){}
    rpc getUser(UserId) returns(User){}
}

//messages are like types that are used in rpcs
message User  {
    uint32 id = 1;
    string name = 2;
    string email = 3;
}

message UserId {
    uint32 id = 1;
}